# adk

./: .coverage  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =2.32.2  LICENSE  Project File Tree.txt  README.markdown  README.md  TODO.markdown  TODO.md  conftest.py  coverage.xml  docker-compose.prod.yaml  docker-compose.yaml  f76447be-b05d-4fff-accb-af1c68ef0bc1.txt  influx.py  mypy.ini  pyproject.toml  requirements-dev.txt  setup-linters.sh  setup.sh
.github/: CODEOWNERS  pull_request_template.md
adk-agent-dev/: .env.example  Dockerfile  README.md  agent.py  docker-compose.yml  requirements.txt
adk-live-agent/: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  fix_quotes.py  live_agent.py  main.py  monitoring.py  prometheus.yml  recovery.py  requirements.txt  risk_management.py  setup.cfg
backtester/: .env.example  Dockerfile  adk_strategy.py  influx_feed.py  optimize_strategy.py  requirements.txt  run_backtest.py
data-pipeline/: Dockerfile  README.md  SCHEMA.md  data_pipeline.py  docker-compose.yml  logger.py  requirements.txt  scheduled_pipeline.py  test_data_pipeline.py
docker/: docker-compose.yml
docs/: cicd_setup.md  code_style_guide.md  influxdb-setup.md
feature-eng/: Dockerfile  docker-compose.yml  feature_engineering.py  requirements.txt  test_feature_engineering.py
reports/: backtest_results.csv
scripts/: validate_python.py
tests/: test_influx_main.py  test_influx_utils.py  test_influxdb.py
utils/: config.py  logger.py
web-ui/: Dockerfile  app.py  requirements.txt
(+20 files in other folders)
